[package]
name = "audio_samples"
version = "2.0.0"
edition = "2024"
rust-version = "1.87"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jmg049/audio_samples"
repository = "https://github.com/jmg049/audio_samples"
documentation = "https://docs.rs/audio_samples"
description = "A typed audio processing library for Rust that treats audio as a first-class, invariant-preserving object rather than an unstructured numeric buffer."

keywords = ["audio", "dsp", "api"]
categories = ["encoding", "multimedia", "science"]

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "audio_samples"
crate-type = ["rlib"]

[dependencies]
bytemuck = "1.25.0"
ndarray = "0.17"
num-traits = "0.2"
thiserror = "2.0"
miette = "7"
num-complex = "0.4"
i24 = { version = "2.3.4", features = [
    "alloc",
    "num-cast",
    "ndarray",
    "std",
] }

serde = { version = "1.0", features = ["derive"], optional = true }
rand = { version = "0.10.1", optional = true }
wide = { version = "1.5.0", optional = true }
spectrograms = { version = "1.4.2", optional = true }

serde_json = { version = "1.0.150", optional = true }

plotly = { version = "0.14.1", optional = true }
plotly_static = { version = "0.1.0", features = [
    "chromedriver",
    "webdriver_download",
], optional = true }
html_view = { version = "0.2.2", optional = true }
base64 = { version = "0.22", optional = true }

rubato = { version = "3.0.0", optional = true }
rayon = { version = "1.12.0", optional = true }
explainable = { version = "0.1.1", optional = true }
term-maths = { version = "1.0.0", optional = true }
open = { version = "5.3.5", optional = true }

rustfft = { version = "6.2", optional = true }
non-empty-slice = "0.6"
non-empty-iter = "0.3.1"
audioadapter = { version =  "3.0.0",  optional = true }
audioadapter-buffers = { version = "3.0.0", optional = true }

[features]
# Minimal core (no heavy dependencies)
default = ["bare-bones"]

# Coloured caret-underline diagnostic rendering via miette's `fancy` renderer.
# Library consumers get plain `Display` unless they opt in; examples and the
# `educational` module enable this so the pretty output is visible by default.
fancy = ["miette/fancy"]

# Core operation categories
statistics = [] # Basic stats: peak, rms, mean
processing = ["statistics"] # Basic processing: normalize, scale, clip
transforms = ["dep:spectrograms", "dep:rustfft"]
editing = [
    "statistics",
    "random-generation",
] # Time operations: trim, pad, reverse (includes noise)
beat-tracking = ["onset-detection"] # Beat tracking operations
onset-detection = [
    "transforms",
    "peak-picking",
    "processing",
] # Onset detection operations
decomposition = [
    "onset-detection",
] # Audio decomposition operations (requires serialization)
dynamic-range = [] # Dynamic range compression/expansion operations
channels = [] # Channel operations: interleave/deinterleave
iir-filtering = [] # IIR filtering operations
parametric-eq = ["iir-filtering", "channels"] # Parametric equalization operations
peak-picking = [] # Peak picking operations
pitch-analysis = ["transforms"] # Pitch analysis operations
resampling = ["dep:rubato", "dep:rayon", "audioadapter", "audioadapter-buffers"] # Resampling operations
vad = [] # Voice activity detection operations
psychoacoustic = ["transforms"] # Psychoacoustic analysis: band layouts, masking thresholds, SMR
parallel = ["dep:rayon"] # Parallel codec encoding/decoding via rayon (works with psychoacoustic)
opus-codec = ["psychoacoustic", "statistics"] # Opus-inspired codec: SILK (speech) and CELT (music) modes
plotting = ["dep:plotly", "dep:base64", "dep:serde_json", "channels", "transforms", "editing"]
envelopes = [
    "dynamic-range",
    "editing",
    "dep:rustfft"
] # Envelope generation operations
fixed-size-audio = [
] # Support for fixed-size audio buffers (no heap allocation)

full = ["full_no_plotting", "plotting"]

full_no_plotting = [
    "statistics",
    "editing",
    "transforms",
    "channels",
    "resampling",
    "fixed-size-audio",
    "beat-tracking",
    "onset-detection",
    "decomposition",
    "dynamic-range",
    "parametric-eq",
    "peak-picking",
    "pitch-analysis",
    "processing",
    "vad",
    "iir-filtering",
    "envelopes",
    "random-generation",
    "psychoacoustic",
    "parallel",
    "opus-codec",
]

educational = ["dep:explainable", "dep:term-maths", "dep:open", "processing", "fancy"]
bare-bones = [] # No features, just the core API and basic types

# Plotting sub-features (require plotting)
static-plots = ["plotting", "dep:plotly_static", "dep:serde", "i24/serde"]
simd = ["dep:wide"]
random-generation = ["dep:rand"]
python = ["i24/pyo3"]
html_view = ["dep:html_view"]

[dev-dependencies]
approx_eq = "0.1.8"
clap = { version = "4.6.1", features = ["derive"] }
dtmf_tones = "1.0.1"
rand = "0.10.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

# ---------------------------------------------------------------------------
# Examples — each declares the MINIMAL feature set its body uses so that
# `cargo build --examples` (and `cargo test`) under a partial feature set
# transparently SKIPS the examples whose features are not enabled, instead of
# failing to compile. `--features full` enables them all.
#
# Note on transitive features (do not need to be repeated, but listed where it
# aids clarity): editing -> {statistics, random-generation};
# processing -> statistics; parametric-eq -> {iir-filtering, channels};
# plotting -> {channels, transforms, editing}; onset-detection ->
# {transforms, peak-picking, processing}; beat-tracking -> onset-detection;
# decomposition -> onset-detection; pitch-analysis -> transforms;
# psychoacoustic -> transforms; envelopes -> {dynamic-range, editing}.
# ---------------------------------------------------------------------------

# Core / introductory
# (basics, statistics, utils_demo, detection have minimal or no feature needs)
[[example]]
name = "basics"
required-features = ["statistics"]

[[example]]
name = "statistics"
required-features = ["statistics"]

[[example]]
name = "utils_demo"
# Audio-math utilities are always available; no extra features required.

[[example]]
name = "detection"
# Core detection helpers are ungated; the transforms path is `cfg`-guarded.

# Diagnostics
[[example]]
name = "errors"
required-features = ["fancy"]

[[example]]
name = "error_diagnostics"
required-features = ["fancy"]

# Processing / editing / channels
[[example]]
name = "processing"
required-features = ["processing", "editing", "transforms"]

[[example]]
name = "editing"
required-features = ["editing"]

[[example]]
name = "channels"
required-features = ["channels", "statistics"]

[[example]]
name = "transforms"
required-features = ["transforms", "statistics"]

[[example]]
name = "resampling"
required-features = ["resampling", "statistics", "processing"]

# Filtering / dynamics
[[example]]
name = "iir_filtering"
required-features = ["iir-filtering", "editing", "statistics"]

[[example]]
name = "parametric_eq"
required-features = ["parametric-eq", "statistics"]

[[example]]
name = "dynamic_range"
required-features = ["dynamic-range", "statistics"]

# Analysis
[[example]]
name = "pitch_analysis"
required-features = ["pitch-analysis"]

[[example]]
name = "vad"
required-features = ["vad", "editing"]

[[example]]
name = "hpss"
required-features = ["decomposition", "statistics", "editing"]

[[example]]
name = "psychoacoustic"
required-features = ["psychoacoustic"]

# Educational rendering
[[example]]
name = "educational"
required-features = ["educational", "processing"]

# Plotting (all require the `plotting` feature; several also need transforms,
# statistics, or detection features for the data they visualise)
[[example]]
name = "plotting_basic"
required-features = ["plotting", "transforms"]

[[example]]
name = "plotting_auto_zoom"
required-features = ["plotting", "transforms"]

[[example]]
name = "plotting_spectrum"
required-features = ["plotting", "transforms"]

[[example]]
name = "plotting_overlays"
required-features = ["plotting", "transforms"]

[[example]]
name = "plotting_composite_basics"
required-features = ["plotting", "transforms"]

[[example]]
name = "plotting_composite_advanced"
required-features = ["plotting", "envelopes"]

[[example]]
name = "plotting_configurable_padding"
required-features = ["plotting", "transforms"]

[[example]]
name = "plotting_dsp_overlays"
required-features = ["plotting", "statistics"]

[[example]]
name = "plotting_spectral_overlays"
required-features = ["plotting", "statistics"]

[[example]]
name = "plotting_event_markers"
required-features = ["plotting", "onset-detection", "beat-tracking", "statistics"]

[[test]]
name = "codec_quality"
required-features = ["psychoacoustic", "random-generation"]

[[test]]
name = "opus_codec_quality"
required-features = ["opus-codec", "random-generation"]

[[test]]
name = "processing_pipeline"
required-features = ["statistics", "processing", "editing", "transforms"]

[[test]]
name = "channel_pipeline"
required-features = ["channels", "processing", "editing"]

[[test]]
name = "effects_chain"
required-features = ["channels", "iir-filtering", "dynamic-range", "parametric-eq"]

[[test]]
name = "analysis_pipeline"
required-features = ["pitch-analysis", "vad"]

[[bench]]
name = "filtering"
harness = false
required-features = ["iir-filtering", "processing", "editing", "statistics", "transforms"]