[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "audio_samples"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.7.5",
    "maturin>=1.9.0",
    "memory-profiler>=0.61.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
[tool.maturin]
features = ["pyo3/extension-module", "python"]

[tool.uv.workspace]
members = [
    "benchmarks/python",
]
