[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "audio_samples"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
 "soundfile>=0.13.1",
 "torch",
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
include = [
    { path = "audio_samples.pyi", format = "wheel" },
    { path = "py.typed", format = "wheel" },
]
python-source = "python"
module-name = "audio_samples"


[tool.uv.workspace]
members = ["benchmarks/python"]
